# DZ_14

./: main.py  pyproject.toml  test.db
docs/: conf.py
docs/source/: conf.py
migrations/versions/: 0cd4cbff388b_init.py  22e080f764fc_init.py  233c14a44873_init.py  2b4bec00f050_init.py  c29f5033a318_init.py  d296537aa8fb_init.py  d8410e4aad9b_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
